--- a/calico-cloud/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-cloud/networking/egress/egress-gateway-on-prem.mdx
@@ -83,7 +83,7 @@ IP**, if the egress gateway's pod IP came from an [IP
 pool](../../reference/resources/ippool.mdx) with `natOutgoing: true`, and the egress
 gateway's **pod IP** otherwise.
 
-### Controlling the use of egress gateways
+### Control the use of egress gateways
 
 If a cluster ascribes special meaning to traffic flowing through egress gateways, it will be
 important to control when cluster users can configure their pods and namespaces to use them, so that
@@ -165,7 +165,6 @@ patch release.
 
 **Unsupported**
 
-- AKS
 - GKE
 
 **Required**
@@ -175,13 +174,13 @@ patch release.
 ## How to
 
 - [Enable egress gateway support](#enable-egress-gateway-support)
-- [Enable policy sync API](#enable-policy-sync-api)
 - [Provision an egress IP pool](#provision-an-egress-ip-pool)
-- [Copy pull secret into egress gateway namespace](#copy-pull-secret-into-egress-gateway-namespace)
 - [Deploy a group of egress gateways](#deploy-a-group-of-egress-gateways)
 - [Configure a Namespace or Pod to use egress gateways](#configure-a-namespace-or-pod-to-use-egress-gateways)
 - [Optionally enable ECMP load balancing](#optionally-enable-ecmp-load-balancing)
 - [Verify the feature operation](#verify-the-feature-operation)
+- [Control the use of egress gateways](#control-the-use-of-egress-gateways)
+- [Upgrade egress gateways](#upgrade-egress-gateways)
 
 ### Enable egress gateway support
 
@@ -201,20 +200,13 @@ kubectl patch felixconfiguration.p default --type='merge' -p \
     '{"spec":{"egressIPSupport":"EnabledPerNamespaceOrPerPod"}}'
 ```
 
-### Enable policy sync API
+:::note
 
-Egress gateways require the policy sync API to be enabled on Felix. To do this cluster-wide, modify
-the `default` FelixConfiguration to set the field `policySyncPathPrefix` to `/var/run/nodeagent`:
-
-```batch
-kubectl patch felixconfiguration.p default --type='merge' -p \
-    '{"spec":{"policySyncPathPrefix":"/var/run/nodeagent"}}'
-```
-
-Where:
-
-- `egressIPSupport` and `policySyncPathPrefix` must be the same on all cluster nodes, so you should only set them in the
+- `egressIPSupport` must be the same on all cluster nodes, so you should set them only in the
   `default` FelixConfiguration resource.
+- The operator automatically enables the required policy sync API in the FelixConfiguration.
+
+:::
 
 ### Provision an egress IP pool
 
@@ -228,7 +220,7 @@ kind: IPPool
 metadata:
   name: egress-ippool-1
 spec:
-  cidr: 10.10.10.0/31
+  cidr: 10.10.10.0/30
   blockSize: 31
   nodeSelector: "!all()"
 EOF
@@ -248,116 +240,40 @@ Where:
 
   :::
 
-### Copy pull secret into egress gateway namespace
-
-Identify the pull secret that is needed for pulling {{prodname}} images, and copy this into the
-namespace where you plan to create your egress gateways. It is typically named
-`tigera-pull-secret`, in the `calico-system` namespace, so the command to copy that to the `default`
-namespace would be:
-
-```batch
-kubectl get secret tigera-pull-secret --namespace=calico-system -o yaml | \
-   grep -v '^[[:space:]]*namespace:[[:space:]]*calico-system' | \
-   kubectl apply --namespace=default -f -
-```
-
 ### Deploy a group of egress gateways
 
-Use a Kubernetes Deployment to deploy a group of egress gateways, using the egress IP Pool.
+Use an egress gateway custom resource to deploy a group of egress gateways, using the egress IP Pool.
 
 ```batch
 kubectl apply -f - <<EOF
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: operator.tigera.io/v1
+kind: EgressGateway
 metadata:
   name: egress-gateway
   namespace: default
-  labels:
-    egress-code: red
 spec:
+  logSeverity: "Info"
   replicas: 1
-  selector:
-    matchLabels:
-      egress-code: red
+  ipPools:
+  - cidr: "10.10.10.0/30"
+  egressGatewayFailureDetection:
+    healthTimeoutDataStoreSeconds: 30
+    icmpProbe:
+      ips: ["34.56.2.7"]
+      timeoutSeconds: 15
+      intervalSeconds: 5
+    httpProbe:
+      urls: ["http://example.com"]
+      timeoutSeconds: 30
+      intervalSeconds: 10
   template:
     metadata:
-      annotations:
-        cni.projectcalico.org/ipv4pools: "[\"10.10.10.0/31\"]"
       labels:
         egress-code: red
     spec:
-      imagePullSecrets:
-      - name: tigera-pull-secret
       nodeSelector:
         kubernetes.io/os: linux
-      initContainers:
-      - name: egress-gateway-init
-        command: ["/init-gateway.sh"]
-        image: {{registry}}{% component_image("egress-gateway") %}
-        env:
-         Use downward API to tell the pod its own IP address.
-        - name: EGRESS_POD_IP
-          valueFrom:
-            fieldRef:
-              fieldPath: status.podIP
-        securityContext:
-          privileged: true
-      containers:
-      - name: egress-gateway
-        command: ["/start-gateway.sh"]
-        image: {{registry}}{% component_image("egress-gateway") %}
-        env:
-         Optional: comma-delimited list of IP addresses to send ICMP pings to; if all probes fail, the egress
-         gateway will report non-ready.
-        - name: ICMP_PROBE_IPS
-          value: ""
-         Only used if ICMP_PROBE_IPS is non-empty: interval to send probes.
-        - name: ICMP_PROBE_INTERVAL
-          value: "5s"
-         Only used if ICMP_PROBE_IPS is non-empty: timeout before reporting non-ready if there are no successful
-         ICMP probes.
-        - name: ICMP_PROBE_TIMEOUT
-          value: "15s"
-         Optional comma-delimited list of HTTP URLs to send periodic probes to; if all probes fail, the egress
-         gateway will report non-ready.
-        - name: HTTP_PROBE_URLS
-          value: ""
-         Only used if HTTP_PROBE_URL is non-empty: interval to send probes.
-        - name: HTTP_PROBE_INTERVAL
-          value: "10s"
-         Only used if HTTP_PROBE_URL is non-empty: timeout before reporting non-ready if there are no successful
-         HTTP probes.
-        - name: HTTP_PROBE_TIMEOUT
-          value: "30s"
-         Port that the egress gateway serves its health reports.  Must match the readiness probe and health
-         port defined below.
-        - name: HEALTH_PORT
-          value: "8080"
-        - name: EGRESS_POD_IP
-          valueFrom:
-            fieldRef:
-              fieldPath: status.podIP
-        securityContext:
-          capabilities:
-            add:
-            - NET_ADMIN
-        volumeMounts:
-        - mountPath: /var/run
-          name: policysync
-        ports:
-        - name: health
-          containerPort: 8080
-        readinessProbe:
-          httpGet:
-            path: /readiness
-            port: 8080
-          initialDelaySeconds: 3
-          periodSeconds: 3
       terminationGracePeriodSeconds: 0
-      volumes:
-      - csi:
-          driver: csi.tigera.io
-        name: policysync
 EOF
 ```
 
@@ -365,31 +281,42 @@ Where:
 
 - It is advisable to have more than one egress gateway per group, so that the egress IP function continues if one of the gateways crashes or needs to be restarted. When there are multiple gateways in a group, outbound traffic from the applications using that group is load-balanced across the available gateways. The number of `replicas` specified must be less than or equal to the number of free IP addresses in the IP Pool.
 
-- In the `cni.projectcalico.org/ipv4pools` annotation, the IP Pool can be specified either by its name (e.g. `egress-ippool-1`) or by its CIDR (e.g. `10.10.10.0/31`).
+- IPPool can be specified either by its name (e.g. `-name: egress-ippool-1`) or by its CIDR (e.g. `-cidr: 10.10.10.0/31`).
 
 - The labels are arbitrary. You can choose whatever names and values are convenient for your cluster's Namespaces and Pods to refer to in their egress selectors.
 
-- The image name and `EGRESS_POD_IP` configuration are required. `tigera/egress-gateway` is the image that provides the egress gateway function, and `EGRESS_POD_IP` tells the runtime container what its pod IP is.
+  If labels are not specified, a default label `projectcalico.org/egw`:`name` will be added by the Tigera Operator.
 
-- The `securityContext` is required, so that the egress gateway can manipulate its own network namespace.
+- icmpProbe may be used to specify the Probe IPs, ICMP interval and timeout in seconds. `ips` if set, the
+  egress gateway pod will probe each IP periodically using an ICMP ping. If all pings fail then the egress
+  gateway will report non-ready via its health port. `intervalSeconds` controls the interval between probes.
+  `timeoutSeconds` controls the timeout before reporting non-ready if no probes succeed.
 
-- The `policysync` volume mount is required. This exposes the policy sync API to the pod, allowing it to program its own routing based off information from Felix.
+  ```yaml
+  icmpProbe:
+    ips:
+    - probeIP
+    - probeIP
+    timeoutSeconds: 20
+    intervalSeconds: 10
+  ```
 
-- The `HEALTH_PORT` environment variable controls the port used to serve an HTTP health
-  endpoint, which is used for the `readinessProbe`. If required, the health port can be disabled
-  entirely by setting the environment variable to 0 (and by removing the `readinessProbe` stanza).
+- httpProbe may be used to specify the Probe URLs, HTTP interval and timeout in seconds. `urls` if set, the
+  egress gateway pod will probe each external service periodically. If all probes fail then the egress
+  gateway will report non-ready via its health port. `intervalSeconds` controls the interval between probes.
+  `timeoutSeconds` controls the timeout before reporting non-ready if all probes are failing.
 
-- The `ICMP_PROBE_IPS` environment variable may be set to a comma-separated list of IPs.
-  If set, the egress gateway pod will probe each IP periodically using an ICMP ping. If all pings fail then the egress
-  gateway will report non-ready via its health port. `ICMP_PROBE_INTERVAL` controls the interval between probes.
-  `ICMP_PROBE_TIMEOUT` controls the timeout before reporting non-ready if no probes succeed.
+  ```yaml
+  httpProbe:
+    urls:
+    - probeURL
+    - probeURL
+    timeoutSeconds: 30
+    intervalSeconds: 10
+  ```
+- Please refer to the [operator reference docs](../../reference/installation/api.mdx) for details about the egress gateway resource type.
 
-- The `HTTP_PROBE_URLS` environment variable may be set to a comma-separated list of URLs.
-  If set, the egress gateway pod will probe each external service periodically. If all probes fail then the egress
-  gateway will report non-ready via its health port. `HTTP_PROBE_INTERVAL` controls the interval between probes.
-  `HTTP_PROBE_TIMEOUT` controls the timeout before reporting non-ready if all probes are failing.
-
-The health port is used by:
+The health port `8080` is used by:
 
 - The Kubernetes `readinessProbe` to expose the status of the egress gateway pod (and any ICMP/HTTP
   probes).
@@ -400,17 +327,7 @@ The health port is used by:
 
 ### Deploying on a RKE2 CIS Hardened Cluster
 
-If you are deploying `egress-gateway` on a RKE2 CIS-hardened cluster, its `PodSecurityPolicies` restrict the `securityContext` and `volumes` required by egress gateway. To fix this, apply the following manifests to set up a `PodSecurityPolicy`, `ClusterRole` and associated `ServiceAccount`: `tigera-egress-gateway`.
-
-```batch
-kubectl apply -f {{filesUrl_CE}}/manifests/rancher/custom-psp-rke2-cis-hardened.yaml
-```
-
-Set the `serviceAccount` field in the `egress-gateway` `Deployment` to use the created `ServiceAccount`: `tigera-egeress-gateway` assosciated with the `PodSecurityPolicy`,
-
-```batch
-kubectl -n default set serviceaccount deployment egress-gateway  tigera-egress-gateway
-```
+If you are deploying `egress-gateway` on a RKE2 CIS-hardened cluster, its `PodSecurityPolicies` restrict the `securityContext` and `volumes` required by egress gateway. When deploying using the egress gateway custom resource, the Tigera Operator sets up `PodSecurityPolicy`, `Role`, `RoleBinding` and associated `ServiceAccount`.
 
 ### Configure a Namespace or Pod to use egress gateways
 
@@ -440,7 +357,7 @@ To configure a specific Kubernetes Pod to use egress gateways, specify the same 
 creating the pod. For example:
 
 ```batch
-kubectl apply -f - <<'EOF'
+kubectl apply -f - <<EOF
 apiVersion: v1
 kind: Pod
 metadata:
@@ -490,8 +407,23 @@ docker run --net=host --privileged subfuzion/netcat -v -l -k -p 8089
 
 Then provision an egress IP Pool, and egress gateways, as above.
 
-Then deploy a pod, with egress annotations as above, and with any image that includes netcat, for
-example `laurenceman/alpine`.
+Then deploy a pod, with egress annotations as above, and with any image that includes netcat, for example:
+
+```batch
+kubectl apply -f - <<EOF
+apiVersion: v1
+kind: Pod
+metadata:
+  name: my-netcat-pod
+  namespace: my-namespace
+spec:
+  containers:
+  - name: alpine
+    image: alpine
+    command: ["/bin/sleep"]
+    args: ["infinity"]
+EOF
+```
 
 Now you can use `kubectl exec` to initiate an outbound connection from that pod:
 
@@ -509,43 +441,17 @@ Connection from <source IP> <source port> received
 
 with `<source IP>` being one of the IPs of the egress IP pool that you provisioned.
 
-## Upgrading egress gateways
+## Upgrade egress gateways
 
-Because egress gateway deployments are not currently managed by the Tigera Operator, it is necessary to upgrade
-egress gateway deployments manually.
+From v3.16, egress gateway deployments are managed by the Tigera Operator.
 
-:::note
+- When upgrading from a pre-v3.16 release, no automatic upgrade will occur. To upgrade a pre-v3.16 egress gateway deployment,
+  create an equivalent EgressGateway resource with the same namespace and the same name as mentioned [above](#deploy-a-group-of-egress-gateways);
+  the operator will then take over management of the old Deployment resource, replacing it with the upgraded version.
 
-When upgrading egress gateway deployments, both the image and the deployment spec need to be changed in
-tandem; upgrading only the image version can result in a non-functioning egress gateway. Newer versions of the
-egress gateway image require new volume mounts and environment variables and have other structural changes (such
-as the addition of an `initContainer` in v3.15.0).
-
-:::
-
-To upgrade an egress gateway deployment:
-
-- Before upgrading egress gateways to a particular version, upgrade the other {{prodname}} components
-  first. The egress gateway image should never be newer than the other {{prodname}} components. We recommend
-  keeping the egress gateway version up-to-date with the overall product version to minimise the chance of
-  incompatibilities.
-
-- Ensure that the policy sync API is enabled; this is required by egress gateway images starting with v3.11.0. To
-  enable the policy sync API, follow the steps in [enable policy sync API](#enable-policy-sync-api) above. This API
-  allows the egress gateway daemon inside the egress gateway pod to query {{noderunning}} for the set of active
-  routes in the cluster. If the egress gateway daemon cannot reach the API, it will fail and report errors to the logs
-  as it retries the connection.
-
-- Follow the steps [above](#deploy-a-group-of-egress-gateways) to prepare a deployment manifest for the new version
-  egress gateways with the same name as the old. As noted above, the deployment must be updated in lockstep with
-  the image version because different versions require different volumes/environment variables and other settings.
-
-  - If upgrading from a pre-v3.15 release, you may wish to enable the new ICMP and/or HTTP probe features, which allow
-    the egress gateways to probe one or more external hosts with ICMP pings and/or HTTP GET requests and report problems through
-    their Kubernetes `readinessProbe`s. These are controlled by environment variables in the deployment manifest.
-
-- Use `kubectl replace` to apply the manifest over the existing one. Kubernetes will roll out the new egress gateways,
-  replacing the old.
+- Use `kubectl apply` to create the egress gateway resource. Tigera Operator will read the newly created resource and wait
+  for the other {{prodname}} components to be upgraded. Once the other {{prodname}} components are upgraded, Tigera Operator
+  will upgrade the existing egress gateway deployment with the new image.
 
 By default, upgrading egress gateways will sever any connections that are flowing through them. To minimise impact,
 the egress gateway feature supports some advanced options that give feedback to affected pods. For more details see
