--- a/calico-enterprise_versioned_docs/version-3.16/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/networking/egress/egress-gateway-on-prem.mdx
@@ -174,9 +174,7 @@ patch release.
 ## How to
 
 - [Enable egress gateway support](#enable-egress-gateway-support)
-- [Enable policy sync API](#enable-policy-sync-api)
 - [Provision an egress IP pool](#provision-an-egress-ip-pool)
-- [Copy pull secret into egress gateway namespace](#copy-pull-secret-into-egress-gateway-namespace)
 - [Deploy a group of egress gateways](#deploy-a-group-of-egress-gateways)
 - [Configure a Namespace or Pod to use egress gateways](#configure-a-namespace-or-pod-to-use-egress-gateways)
 - [Optionally enable ECMP load balancing](#optionally-enable-ecmp-load-balancing)
@@ -202,20 +200,13 @@ kubectl patch felixconfiguration.p default --type='merge' -p \
     '{"spec":{"egressIPSupport":"EnabledPerNamespaceOrPerPod"}}'
 ```
 
-### Enable policy sync API
+:::note
 
-Egress gateways require the policy sync API to be enabled on Felix. To do this cluster-wide, modify
-the `default` FelixConfiguration to set the field `policySyncPathPrefix` to `/var/run/nodeagent`:
-
-```batch
-kubectl patch felixconfiguration.p default --type='merge' -p \
-    '{"spec":{"policySyncPathPrefix":"/var/run/nodeagent"}}'
-```
-
-Where:
-
-- `egressIPSupport` and `policySyncPathPrefix` must be the same on all cluster nodes, so you should only set them in the
+- `egressIPSupport` must be the same on all cluster nodes, so you should set them only in the
   `default` FelixConfiguration resource.
+- The operator automatically enables the required policy sync API in the FelixConfiguration.
+
+:::
 
 ### Provision an egress IP pool
 
@@ -249,22 +240,9 @@ Where:
 
   :::
 
-### Copy pull secret into egress gateway namespace
-
-Identify the pull secret that is needed for pulling {{prodname}} images, and copy this into the
-namespace where you plan to create your egress gateways. It is typically named
-`tigera-pull-secret`, in the `calico-system` namespace, so the command to copy that to the `default`
-namespace would be:
-
-```batch
-kubectl get secret tigera-pull-secret --namespace=calico-system -o yaml | \
-   grep -v '^[[:space:]]*namespace:[[:space:]]*calico-system' | \
-   kubectl apply --namespace=default -f -
-```
-
 ### Deploy a group of egress gateways
 
-Use an Egress Gateway custom resource to deploy a group of egress gateways, using the egress IP Pool.
+Use an egress gateway custom resource to deploy a group of egress gateways, using the egress IP Pool.
 
 ```batch
 kubectl apply -f - <<EOF
@@ -277,7 +255,7 @@ spec:
   logSeverity: "Info"
   replicas: 1
   ipPools:
-  - cidr: "10.10.10.0/31"
+  - cidr: "10.10.10.0/30"
   egressGatewayFailureDetection:
     healthTimeoutDataStoreSeconds: 30
     icmpProbe:
@@ -336,7 +314,7 @@ Where:
     timeoutSeconds: 30
     intervalSeconds: 10
   ```
-- Please refer to the [operator reference docs](../../reference/installation/api.mdx) for details about the Egress Gateway resource type.
+- Please refer to the [operator reference docs](../../reference/installation/api.mdx) for details about the egress gateway resource type.
 
 The health port `8080` is used by:
 
@@ -349,7 +327,7 @@ The health port `8080` is used by:
 
 ### Deploying on a RKE2 CIS Hardened Cluster
 
-If you are deploying `egress-gateway` on a RKE2 CIS-hardened cluster, its `PodSecurityPolicies` restrict the `securityContext` and `volumes` required by egress gateway. When deploying using the Egress Gateway custom resource, the Tigera Operator sets up `PodSecurityPolicy`, `Role`, `RoleBinding` and associated `ServiceAccount`.
+If you are deploying `egress-gateway` on a RKE2 CIS-hardened cluster, its `PodSecurityPolicies` restrict the `securityContext` and `volumes` required by egress gateway. When deploying using the egress gateway custom resource, the Tigera Operator sets up `PodSecurityPolicy`, `Role`, `RoleBinding` and associated `ServiceAccount`.
 
 ### Configure a Namespace or Pod to use egress gateways
 
@@ -465,16 +443,9 @@ with `<source IP>` being one of the IPs of the egress IP pool that you provision
 
 ## Upgrade egress gateways
 
-From v3.16, Egress Gateway deployments are managed by the Tigera Operator.
+From v3.16, egress gateway deployments are managed by the Tigera Operator.
 
-
-- Ensure that the policy sync API is enabled; this is required by egress gateway images starting with v3.11.0. To
-  enable the policy sync API, follow the steps in [enable policy sync API](#enable-policy-sync-api) above. This API
-  allows the egress gateway daemon inside the egress gateway pod to query {{noderunning}} for the set of active
-  routes in the cluster. If the egress gateway daemon cannot reach the API, it will fail and report errors to the logs
-  as it retries the connection.
-
-- When upgrading from a pre-v3.16 release, no automatic upgrade will occur. To upgrade a pre-v3.16 Egress Gateway deployment,
+- When upgrading from a pre-v3.16 release, no automatic upgrade will occur. To upgrade a pre-v3.16 egress gateway deployment,
   create an equivalent EgressGateway resource with the same namespace and the same name as mentioned [above](#deploy-a-group-of-egress-gateways);
   the operator will then take over management of the old Deployment resource, replacing it with the upgraded version.
 
