--- a/calico-enterprise/reference/architecture/overview.mdx
+++ b/calico-enterprise/reference/architecture/overview.mdx
@@ -13,8 +13,8 @@ The following diagram shows the components that comprise a Kubernetes on-premise
 **Tip**: For best visibility, right-click on the image below and select "Open image in new tab"
 
 <ModalImage
-  small='/img/calico-enterprise/architecture-ee.svg'
-  medium='/img/calico-enterprise/architecture-ee.svg'
+  small='/img/calico-enterprise/architecture-ee-new.svg'
+  medium='/img/calico-enterprise/architecture-ee-new.svg'
   alt='Architecture'
   imageBackgroundColor='white'
 />
@@ -25,7 +25,7 @@ Calico open-source components are the foundation of {{prodname}}. {{prodname}} p
 
 - [calicoq](#calicoq)
 - [Compliance](#compliance)
-- [Elasticsearch gateway](#elasticsearch-gateway)
+- [Linseed API and ES gateway](#linseed-api-and-es-gateway)
 - [Intrusion detection](#intrusion-detection)
 - [kube-controllers](#kube-controllers)
 - [Manager](#manager)
@@ -102,9 +102,9 @@ Provides the API for listing, downloading, and rendering reports, and RBAC by pe
 
 A daemonset that runs checks in the CIS Kubernetes Benchmark on each node so you can see if Kubernetes is securely deployed.
 
-### Elasticsearch gateway
+### Linseed API and ES gateway
 
-**Main task**: Protects managed clusters from potential attacks in a multi-cluster management (mcm) deployment. Enforces that 1) managed cluster components do not get credentials for an Elasticsearch user (for access/permissions to Elasticsearch and Kibana), and 2) all Elasticsearch requests from a managed cluster are only on an index that the cluster is allowed to access. In short, a compromised component in a managed cluster cannot write data or create indexes for another cluster/tenant.
+The Linseed API uses mTLS to connect to clients, and provides an API to access Elasticsearch data. The ES gateway proxies requests to Elasticsearch, and provides backwards-compatibility for managed clusters that run versions before 3.17.
 
 ### Intrusion detection
 
@@ -118,7 +118,6 @@ A daemonset that runs checks in the CIS Kubernetes Benchmark on each node so you
 - Service
 - Federated services
 - Authorization
-- Elasticsearch configuration
 - Managed cluster (for management clusters only)
 
 ### Manager
