--- a/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/docker-enterprise.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/docker-enterprise.mdx
@@ -19,9 +19,9 @@ Install {{prodname}} on a Mirantis Kubernetes Engine (MKE) cluster (formerly Doc
   - A minimum of three nodes for non-production deployments
   - CNI flag set to unmanaged, `--unmanaged-cni` so UCP does not install the default {{prodname}} networking plugin
 
-  For help, see [Docker Enterprise](https://docs.docker.com/ee/) and [Docker EE Best Practices and Design Considerations](https://docs.mirantis.com/docker-enterprise/v3.0/dockeree-ref-arch/deploy-manage/best-practices-design.html)
+  For help, see [Docker Enterprise](https://docs.docker.com/) and [Docker EE Best Practices and Design Considerations](https://docs.mirantis.com/docker-enterprise/v3.0/dockeree-ref-arch/deploy-manage/best-practices-design.html)
 
-- Install UCP control plane to access the cluster using [Docker Universal Control Plane CLI-Based Access](https://docs.docker.com/ee/ucp/user-access/cli/). After installing the control plane, enable the option "Allow all authenticated users, including service accounts, to schedule on all nodes, including UCP managers and DTR nodes."
+- Install UCP control plane to access the cluster using [Docker Universal Control Plane CLI-Based Access](https://dockerlabs.collabnix.com/advanced/Docker-UCP-overview.html). After installing the control plane, enable the option "Allow all authenticated users, including service accounts, to schedule on all nodes, including UCP managers and DTR nodes."
 
 **{{prodname}} requirements**
 
