--- a/calico-cloud_versioned_docs/version-3.15/network-policy/beginners/simple-policy-cnx.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/network-policy/beginners/simple-policy-cnx.mdx
@@ -328,4 +328,4 @@ from anywhere else.
    ```
 
    This was just a simple example of the Kubernetes NetworkPolicy API and how {{prodname}} can secure your Kubernetes cluster. For more
-   information on network policy in Kubernetes, see the [Kubernetes user guide](http://kubernetes.io/docs/user-guide/networkpolicies/).
+   information on network policy in Kubernetes, see the [Kubernetes user guide](https://kubernetes.io/docs/concepts/services-networking/network-policies/).
