--- a/calico-cloud_versioned_docs/version-3.15/reference/resources/stagedkubernetesnetworkpolicy.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/reference/resources/stagedkubernetesnetworkpolicy.mdx
@@ -18,7 +18,7 @@ may be used to specify the resource type on the CLI:
 ## Sample YAML
 
 Below is a sample policy created from the example policy from the
-[Kubernetes NetworkPolicy documentation](https://kubernetes.io/docs/concepts/services-networking/network-policies/#the-networkpolicy-resource).
+[Kubernetes NetworkPolicy documentation](https://kubernetes.io/docs/concepts/services-networking/network-policies/#networkpolicy-resource).
 The only difference between this policy and the example Kubernetes version is that the `apiVersion` and `kind` are changed
 to properly specify a staged Kubernetes network policy.
 
