--- a/calico_versioned_docs/version-3.24/reference/kube-controllers/configuration.mdx
+++ b/calico_versioned_docs/version-3.24/reference/kube-controllers/configuration.mdx
@@ -54,7 +54,7 @@ The `*_FILE` variables are _paths_ to the corresponding certificates/keys. As su
 must ensure that the files exist within the pod. This is usually done in one of two ways:
 
 - Mount the certificates from the host. This requires that the certificates be present on the host running the controller.
-- Use Kubernetes [Secrets](http://kubernetes.io/docs/user-guide/secrets/) to mount the certificates into the pod as files.
+- Use Kubernetes [Secrets](https://kubernetes.io/docs/concepts/configuration/secret/) to mount the certificates into the pod as files.
 
 #### kubernetes
 
