--- a/calico-cloud_versioned_docs/version-3.15/network-policy/policy-tiers/allow-tigera.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/network-policy/policy-tiers/allow-tigera.mdx
@@ -5,7 +5,7 @@ description: Understand how to change the behavior of the allow-tigera tier.
 # Change allow-tigera tier behavior
 
 :::warning
-The `allow-tigera` tier contains policies that secure {{prodname}} components and is critical to cluster integrity. It is controlled by the Tigera Operator, and policies in the tier should not be edited, and the tier should not be moved. Although you can change the behavior of allow-tigera using adjacent tiers, you can inadvertantly break critical cluster traffic. We highly recommend that you work with Support to implement changes around `allow-tigera` to prevent service disruption.
+The `allow-tigera` tier contains policies that secure {{prodname}} components and is critical to cluster integrity. It is controlled by the Tigera Operator, and policies in the tier should not be edited, and the tier should not be moved. Although you can change the behavior of allow-tigera using adjacent tiers, you can inadvertently break critical cluster traffic. We highly recommend that you work with Support to implement changes around `allow-tigera` to prevent service disruption.
 
 :::
 
