--- a/calico-cloud/network-policy/policy-tiers/tiered-policy.mdx
+++ b/calico-cloud/network-policy/policy-tiers/tiered-policy.mdx
@@ -18,11 +18,11 @@ description: Learn about policies, tiers, and policy evaluation.
 
 All {{prodname}} and Kubernetes network policies reside in tiers. You can start "thinking in tiers" by grouping your teams and types of policies within each group. For example, we recommend these three tiers (platform, security, and application).
 
-![policy-types](/img/calico-cloud/policy-types.svg)
+![policy types](/img/calico-cloud/policy-types.svg)
 
 Next, you can determine the priority of policies in tiers (from top to bottom). In the following example, that platform and security tiers use {{prodname}} global network policies that apply to all pods, while developer teams can safely manage pods within namespaces using Kubernetes network policy for their applications and microservices.
 
-![policy-tiers](/img/calico-cloud/policy-tiers.png)
+![policy tiers](/img/calico-cloud/policy-tiers.png)
 
 ## Create a tier and policy
 
@@ -54,7 +54,7 @@ kubectl apply -f security.yaml
 
 The default tier is created during installation and is always the last tier.
 
-![default-tier](/img/calico-cloud/default-tier.png)
+![default tier](/img/calico-cloud/default-tier.png)
 
 The default tier is where:
 
@@ -68,11 +68,11 @@ System tiers are added during installation and are hidden by default. Always add
 
 - **allow-tigera** tier contains policies to secure {{prodname}} components and are controlled by the Tigera Operator. These policies should not be edited, and the tier should not be moved. Inadvertent changes are automatically reverted by the Operator to ensure your cluster is always protected.
 
-   ::: warning
+:::warning
 
-   Although it is possible to change the behavior of the `allow-tigera` using adjacent tiers, it is not a trivial task. You can break critical cluster traffic and impact the operation of {{prodname}}. To prevent loss of cluster services, see [Change allow-tigera tier behavior](allow-tigera.mdx), and contact Support for help.
+Although it is possible to change the behavior of the `allow-tigera` using adjacent tiers, it is not a trivial task. You can break critical cluster traffic and impact the operation of {{prodname}}. To prevent loss of cluster services, see [Change allow-tigera tier behavior](allow-tigera.mdx), and contact Support for help.
 
-   :::
+:::
 
 - **tigera-security** - contains threat protection policies
 
@@ -82,7 +82,7 @@ You can move tiers by dragging and moving them in the graphical sequence, but al
 
 To show all tiers, click **View** and select all of the tiers in the Show tiers list.
 
-![hidden-tiers](/img/calico-cloud/hidden-tiers.png)
+![hidden tiers](/img/calico-cloud/hidden-tiers.png)
 
 Now you can reorder tiers by dragging and moving them.
 
@@ -90,7 +90,7 @@ Now you can reorder tiers by dragging and moving them.
 
 Tiers are ordered from left to right, starting with the highest priority (also called highest precedence) tiers.
 
-![tier-order](/img/calico-cloud/tier-order.png)
+![tier order](/img/calico-cloud/tier-order.png)
 
 In the example above, tier priorities are as follows:
 
@@ -104,7 +104,7 @@ The tier you put as the highest priority (after system tiers), depends on your e
 
 Policies are processed in sequential order from top to bottom.
 
-![policy-processing](/img/calico-cloud/policy-processing.png)
+![policy processing](/img/calico-cloud/policy-processing.png)
 
 Two mechanisms drive how traffic is processed across tiered policies:
 
@@ -123,7 +123,7 @@ The following diagrams show the relationship between all of the elements that af
 - **Policy action rules** define how to process traffic in and across tiers, and policy labels and selectors specify how groups of pods are allowed to communicate with each other and other network endpoints
 - The **CNI**, **{{prodname}} components**, and underlying **dataplane** (iptables/eBPF) all make use of labels and selectors as part of routing traffic.
 
-![tier-funnel](/img/calico-cloud/tier-funnel.svg)
+![tier funnel](/img/calico-cloud/tier-funnel.svg)
 
 ### Policy action rules
 
@@ -137,7 +137,7 @@ The following diagrams show the relationship between all of the elements that af
 
 As shown in the following diagram, at the end of each tier is an implicit default deny. This is a safeguard that helps mitigate against unsecured policy. Because of this safeguard, you must explicitly apply the **Pass** action rule when you want traffic evaluation to continue. In the following example, the Pass action in a policy ensures that traffic evaluation continues, and overrides the implicit default deny.
 
-![implicit-deny](/img/calico-cloud/implicit-deny.svg)
+![implicit deny](/img/calico-cloud/implicit-deny.svg)
 
 Let’s look at a Dev/Ops global network policy in a high precedence tier (Platform). The policy denies ingress and egress traffic to workloads that match selector, `env != "stage"`. To ensure that policies continue to evaluate traffic after this policy, the policy adds a Pass action for both ingress and egress.
 
@@ -173,7 +173,7 @@ Whoever is responsible for tier creation, also needs to understand how policy se
 
 In the following example, policy D in the Security tier includes a **Pass action** rule because we want traffic evaulation to continue to the next tier in sequence. In the Platform tier, there are no selectors in policies that match endpoints so the tier is skipped, including the end of tier deny. Evaluation continues to the Application tier. **Policy J** is the first policy with a matching endpoint.
 
-![endpoint-match](/img/calico-cloud/endpoint-match.svg)
+![endpoint match](/img/calico-cloud/endpoint-match.svg)
 
 ### Default endpoint behavior
 
