--- a/calico-enterprise/network-policy/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/policy-recommendations.mdx
@@ -10,7 +10,7 @@ Enable continuous policy recommendations.
 
 ## Value
 
-After you install {{prodname}}, the recommended zero-trust security stance is to deny traffic flows to protect the cluster. Although this is a good thing, allowing traffic requires writing tiered network policy. Writing policy for tiers that follows best practices can be an obstacle to quickly getting clusters up to observe allowed traffic. 
+After you install {{prodname}}, the recommended zero-trust security stance is to deny all traffic flows to protect the cluster. Although this is a good thing, allowing traffic requires writing tiered network policy. Writing policy for tiers that follow best practices can be an obstacle to quickly observing allowed traffic. 
 
 Developers with no experience can get {{prodname}} policy recommendations that allow traffic, but still secure workloads to/from the cluster’s namespaces. In a safe staging environment, developers can immediately get visibility into the impact of network traffic flows. 
 
@@ -21,6 +21,7 @@ Developers with no experience can get {{prodname}} policy recommendations that a
 To enable/disable policy recommendation, you must have the **tigera-admin** role or permissions to the **Policy Recommendations** resource. 
 
 **Recommended**
+
 Basic knowledge of policies and tiers:
 - [Network policy tutorial](../network-policy/policy-tiers/policy-tutorial-ui)
 - [Get started with tiered network policy](../network-policy/policy-tiers/tiered-policy)
